--- a/_posts/2018-6-15-CDC.md
+++ b/_posts/2018-6-15-CDC.md
@@ -4,7 +4,7 @@ title: Predicting Deaths from Diseases Related to Air Pollution (and Quantifying
 ---
 Project:
 
-## Data Science Problem: 
+# Data Science Problem: 
 My project's first objective was to predict the number of deaths from diseases related to air pollution: namely Ischaemic Heart Disease (IHD) and Chronic Obstructive Pulmonary Disease (COPD). The second objective was to isolate and quantify the effect of air pollution in those deaths. I decided to structure my problem so that I was predicting deaths for each five year age group (for example, 65-70 years) for each county in the continental United States. 
 
 # Gathering Data
@@ -38,7 +38,7 @@ However, neither model could quantify the effect of particulate matter density. 
 
 When that failed, I moved to a propensity score matching method, hoping for better luck in controlling for confounders.
 
-Propensity Score Matching to Extract Effect of Pair Pollution:
+# Propensity Score Matching to Extract Effect of Pair Pollution:
 First, I created two groups of counties as 'high' (high air pollution) and 'low' (low air pollution), separated by the median particle density for all counties. I then ran my features through a logistic regression classifier, asking it to predict if a county was 'high' or 'low', without having knowledge of death counts, nor actual particle density values. Below is the distribution of the two groups:
 
 ![Likelihood Dist](../images/COPD_High_Low_groups.png?raw=true)
