--- a/_posts/2018-6-15-CDC.md
+++ b/_posts/2018-6-15-CDC.md
@@ -12,8 +12,8 @@ I gathered data on deaths by IHD and COPD from the Center for Disease Control fo
 
 One fear I hd was that air quality would be highly correlated wth variables such as poverty, but a visual exploration showed that this was not necessarily the case. See below for the geographic distribution of air pulltion and % living in poverty:
 
-![Air Pollution Particle Density](../images/Air.pdf?raw=true)
-![Poverty Distribution](../images/Poverty.pdf?raw=true)
+![Air Pollution Particle Density](../images/Air.png?raw=true)
+![Poverty Distribution](../images/Poverty.png?raw=true)
 
 # Structuring Dataset
 I then picked four years for observing deaths (2012-2015). Following that, I looked at an eight year moving average of particle density and other features preceding the year of observed deaths. This is what my data set looked like:
@@ -41,7 +41,7 @@ When that failed, I moved to a propensity score matching method, hoping for bett
 # Propensity Score Matching to Extract Effect of Pair Pollution:
 First, I created two groups of counties as 'high' (high air pollution) and 'low' (low air pollution), separated by the median particle density for all counties. I then ran my features through a logistic regression classifier, asking it to predict if a county was 'high' or 'low', without having knowledge of death counts, nor actual particle density values. Below is the distribution of the two groups:
 
-![Likelihood Dist](../images/COPD_High_Low_groups.png?raw=true)
+![Likelihood Dist](../images/COPD_high_low_groups.png?raw=true)
 
 Since we have overlap between log likelihood of -1.8 and 0, we compare data points from both groupswithin that range. Note that the log likelihood for the 'high' safety group is concentrated near 0. This is expected, since predicitons for this group are much more accurate than the other group.
 
