--- a/_posts/2018-6-15-CDC.md
+++ b/_posts/2018-6-15-CDC.md
@@ -2,12 +2,12 @@
 layout: post
 title: Predicting Deaths from Diseases Related to Air Pollution (and Quantifying the Effect of Air Pollution )
 ---
-Project:
+## Project:
 
-# Data Science Problem: 
+## Data Science Problem: 
 My project's first objective was to predict the number of deaths from diseases related to air pollution: namely Ischaemic Heart Disease (IHD) and Chronic Obstructive Pulmonary Disease (COPD). The second objective was to isolate and quantify the effect of air pollution in those deaths. I decided to structure my problem so that I was predicting deaths for each five year age group (for example, 65-70 years) for each county in the continental United States. 
 
-# Gathering Data
+## Gathering Data
 I gathered data on deaths by IHD and COPD from the Center for Disease Control for years ranging from 2001 to 2015. I found information on air pollution from the EPA website and used fine particulate matter (known as P<sub>2.5</sub> particles) density as a metric for air pollution. I also needed to control for confounders, so I looked at strong influencers of IHD and COPD such as obesity, % in poverty and size of metro (large metro, rural, etc.), among others, from a variety of sources.
 
 One fear I hd was that air quality would be highly correlated wth variables such as poverty, but a visual exploration showed that this was not necessarily the case. See below for the geographic distribution of air pulltion and % living in poverty:
@@ -15,7 +15,7 @@ One fear I hd was that air quality would be highly correlated wth variables such
 ![Air Pollution Particle Density](../images/Air.png?raw=true)
 ![Poverty Distribution](../images/Poverty.png?raw=true)
 
-# Structuring Dataset
+## Structuring Dataset
 I then picked four years for observing deaths (2012-2015). Following that, I looked at an eight year moving average of particle density and other features preceding the year of observed deaths. This is what my data set looked like:
 
 Observed deaths for 2015 - Average of features from 2004-2011
@@ -25,7 +25,7 @@ Observed deaths for 2012 - Average of features from 2001-2008
 
 I did this because a one year time lag of features (a regular time series) would not be a significant influence on deaths. For example, exposure to pollution must be continuous over a period of time, for it to take effect.
 
-# Selection of Models:
+## Selection of Models:
 I fitted my model on a training set using a Poisson GLM, since we are dealing with count data. The distribution of deaths shows that the Poisson GLM would be the most appropriate model to use.
 
 ![Histogram for COPD Deaths](../images/COPD_Hist.png?raw=true)
@@ -38,7 +38,7 @@ However, neither model could quantify the effect of particulate matter density. 
 
 When that failed, I moved to a propensity score matching method, hoping for better luck in controlling for confounders.
 
-# Propensity Score Matching to Extract Effect of Pair Pollution:
+## Propensity Score Matching to Extract Effect of Pair Pollution:
 First, I created two groups of counties as 'high' (high air pollution) and 'low' (low air pollution), separated by the median particle density for all counties. I then ran my features through a logistic regression classifier, asking it to predict if a county was 'high' or 'low', without having knowledge of death counts, nor actual particle density values. Below is the distribution of the two groups:
 
 ![Likelihood Dist](../images/COPD_high_low_groups.png?raw=true)
@@ -49,7 +49,7 @@ I then received the likelihoods from the model, and matched pairs of counties - 
 
 We can then compare all possible pairs from each group, and retrieve pairs that have a 'predict_proba' output within .0005 of each other (in other words, very similar pairs). This should ensure that we have effectively controlled for confounders.
 
-# T-Test on Paired Data and Interpretation
+## T-Test on Paired Data and Interpretation
 Finally, I ran a T-Test paired data (one variable being P<sub>2.5</sub> Density, and the other being the difference in proporition of deaths between pairs of counties). The p-vaule for this test is 0.02969; which is very low and, therefore, statistically siginficant. However, what about other variables? Are they statstically significant when paired with the attendance rate? If they were, it would mean that we had not yet effectively controlled for confounders. Let's look at the p-values for other variables:
 
 * % in Poverty: Ttest Result(statistic=-0.34819, pvalue=0.72785) 
