--- a/_posts/2018-6-15-CDC.md
+++ b/_posts/2018-6-15-CDC.md
@@ -30,7 +30,7 @@ I fitted my model on a training set using a Poisson GLM, since we are dealing wi
 
 ![Histogram for COPD Deaths](../images/COPD_Hist.png?raw=true)
 
-With some regularization, I achieved good results an R<sup>2</sup> of 0.70608; while also achieving better results with a Random Forest regressor accuracy score of 0.87757
+With some regularization, I achieved good results (an R<sup>2</sup> of 0.70608); while also achieving better results with a Random Forest regressor (accuracy score of 0.87757).
 
 However, neither model could quantify the effect of particulate matter density. With my Poisson GLM, the coefficient for this feature (variable) was small and fluctuated wildly every time I ran my model (in spite of a small p-value). As for the Random Forest regressor, the model cannot provide coefficients to begin with (only feature importances). Since I clearly needed a different technique to quantify the effect of particle density, I tried controlling for confounders using K-Means. 
 
