--- a/_posts/2018-6-15-CDC.md
+++ b/_posts/2018-6-15-CDC.md
@@ -2,8 +2,6 @@
 layout: post
 title: Predicting Deaths from Diseases Related to Air Pollution (and Quantifying the Effect of Air Pollution )
 ---
-## Project:
-
 ## Data Science Problem: 
 My project's first objective was to predict the number of deaths from diseases related to air pollution: namely Ischaemic Heart Disease (IHD) and Chronic Obstructive Pulmonary Disease (COPD). The second objective was to isolate and quantify the effect of air pollution in those deaths. I decided to structure my problem so that I was predicting deaths for each five year age group (for example, 65-70 years) for each county in the continental United States. 
 
@@ -15,7 +13,7 @@ One fear I hd was that air quality would be highly correlated wth variables such
 ![Air Pollution Particle Density](../images/Air.png?raw=true)
 ![Poverty Distribution](../images/Poverty.png?raw=true)
 
-## Structuring Dataset
+## Structuring Dataset:
 I then picked four years for observing deaths (2012-2015). Following that, I looked at an eight year moving average of particle density and other features preceding the year of observed deaths. This is what my data set looked like:
 
 Observed deaths for 2015 - Average of features from 2004-2011
