--- a/_posts/2018-6-15-CDC.md
+++ b/_posts/2018-6-15-CDC.md
@@ -24,11 +24,11 @@ Observed deaths for 2012 - Average of features from 2001-2008
 I did this because a one year time lag of features (a regular time series) would not be a significant influence on deaths. For example, exposure to pollution must be continuous over a period of time, for it to take effect.
 
 ## Selection of Models:
-I fitted my model on a training set using a Poisson GLM, since we are dealing with count data. The distribution of deaths shows that the Poisson GLM would be the most appropriate model to use.
+Let us focus on COPD for the remainder of this discussion. We will revisit IHD at the end of this post. I fitted my model on a training set using a Poisson GLM, since we are dealing with count data. The distribution of deaths shows that the Poisson GLM would be the most appropriate model to use.
 
 ![Histogram for COPD Deaths](../images/COPD_Hist.png?raw=true)
 
-With some regularization, I achieved good results (an R<sup>2</sup> of 0.70608); while also achieving better results with a Random Forest regressor (accuracy score of 0.87757).
+With some regularization, I achieved good results (an R<sup>2</sup> of 0.70608 for COPD); while also achieving better results with a Random Forest regressor (accuracy score of 0.87757 for COPD).
 
 However, neither model could quantify the effect of particulate matter density. With my Poisson GLM, the coefficient for this feature (variable) was small and fluctuated wildly every time I ran my model (in spite of a small p-value). As for the Random Forest regressor, the model cannot provide coefficients to begin with (only feature importances). Since I clearly needed a different technique to quantify the effect of particle density, I tried controlling for confounders using K-Means. 
 
@@ -47,7 +47,7 @@ I then received the likelihoods from the model, and matched pairs of counties - 
 
 We can then compare all possible pairs from each group, and retrieve pairs that have a 'predict_proba' output within .0005 of each other (in other words, very similar pairs). This should ensure that we have effectively controlled for confounders.
 
-## T-Test on Paired Data and Interpretation
+## T-Test on Paired Data and Interpretation:
 Finally, I ran a T-Test paired data (one variable being P<sub>2.5</sub> Density, and the other being the difference in proporition of deaths between pairs of counties). The p-vaule for this test is 0.02969; which is very low and, therefore, statistically siginficant. However, what about other variables? Are they statstically significant when paired with the attendance rate? If they were, it would mean that we had not yet effectively controlled for confounders. Let's look at the p-values for other variables:
 
 * % in Poverty: Ttest Result(statistic=-0.34819, pvalue=0.72785) 
@@ -57,7 +57,9 @@ Finally, I ran a T-Test paired data (one variable being P<sub>2.5</sub> Density,
 * 2013 Urbanization Code: Ttest Result(1.57890, pvalue=0.11501) 
 * Population: Ttest Result(statistic=1.85492, pvalue=0.39302) 
 
-It is clear that P<sub>2.5</sub> Density was is the only statistically significant feature (meaning that air pollution does affect COPD death rates). Further, although I found that the mean difference in death rates from COPD between pairs of high and low counties was statistically significant, for IHD it was not. This makes intuitive sense, because the lungs are the first organs to be affected by air pollution! To quantify this, I could infer that, on average, counties with high particulate matter density witnessed 7% more deaths than their low density counterparts. 
+It is clear that P<sub>2.5</sub> Density was is the only statistically significant feature (meaning that air pollution does affect COPD death rates). 
+
+Further, although I found that the mean difference in death rates from COPD between pairs of high and low counties was statistically significant, for IHD it was not. This makes intuitive sense, because the lungs are the first organs to be affected by air pollution! To quantify this, I could infer that, on average, counties with high particulate matter density witnessed 7% more deaths than their low density counterparts. 
 
 
 
