--- a/_posts/2018-6-15-CDC.md
+++ b/_posts/2018-6-15-CDC.md
@@ -6,9 +6,9 @@ title: Predicting Deaths from Diseases Related to Air Pollution (and Quantifying
 My project's first objective was to predict the number of deaths from diseases related to air pollution: namely Ischaemic Heart Disease (IHD) and Chronic Obstructive Pulmonary Disease (COPD). The second objective was to isolate and quantify the effect of air pollution in those deaths. I decided to structure my problem so that I was predicting deaths for each five year age group (for example, 65-70 years) for each county in the continental United States. 
 
 ## Gathering Data:
-I gathered data on deaths by IHD and COPD from the Center for Disease Control for years ranging from 2001 to 2015. I found information on air pollution from the EPA website and used fine particulate matter (known as P<sub>2.5</sub> particles) density as a metric for air pollution. I also needed to control for confounders, so I looked at strong influencers of IHD and COPD such as obesity, % in poverty and size of metro (large metro, rural, etc.), among others, from a variety of sources.
+I gathered data on deaths by IHD and COPD from the Center for Disease Control for years ranging from 2001 to 2015. I found information on air pollution from the EPA website and used fine particulate matter (known as P<sub>2.5</sub> particles) density as a metric for air pollution. I also needed to control for confounders, so I looked at strong influencers of IHD and COPD such as obesity, % in poverty and size of metro (large metro, rural, etc.) among others, from a variety of sources.
 
-One fear I hd was that air quality would be highly correlated wth variables such as poverty, but a visual exploration showed that this was not necessarily the case. See below for the geographic distribution of air pulltion and % living in poverty:
+One fear I had was that air quality would be highly correlated wth variables such as poverty, but a visual exploration showed that this was not necessarily the case. See below for the geographic distribution of air pulltion and % living in poverty:
 
 ![Air Pollution Particle Density](../images/Air.png?raw=true)
 ![Poverty Distribution](../images/Poverty.png?raw=true)
@@ -16,15 +16,15 @@ One fear I hd was that air quality would be highly correlated wth variables such
 ## Structuring Dataset:
 I then picked four years for observing deaths (2012-2015). Following that, I looked at an eight year moving average of particle density and other features preceding the year of observed deaths. This is what my data set looked like:
 
-Observed deaths for 2015 - Average of features from 2004-2011
-Observed deaths for 2014 - Average of features from 2003-2010
-Observed deaths for 2013 - Average of features from 2002-2009
-Observed deaths for 2012 - Average of features from 2001-2008
+* Observed deaths for 2015 - Average of features from 2004-2011
+* Observed deaths for 2014 - Average of features from 2003-2010
+* Observed deaths for 2013 - Average of features from 2002-2009
+* Observed deaths for 2012 - Average of features from 2001-2008
 
 I did this because a one year time lag of features (a regular time series) would not be a significant influence on deaths. For example, exposure to pollution must be continuous over a period of time, for it to take effect.
 
 ## Selection of Models:
-Let us focus on COPD for the remainder of this discussion. We will revisit IHD at the end of this post. I fitted my model on a training set using a Poisson GLM, since we are dealing with count data. The distribution of deaths shows that the Poisson GLM would be the most appropriate model to use.
+Let us focus on COPD for the remainder of this discussion. We will revisit IHD at the end of this post. I fitted my model on a training set using a Poisson GLM, since we are dealing with count data. The distribution of deaths against each age group shows that the Poisson GLM would be the most appropriate model to use.
 
 ![Histogram for COPD Deaths](../images/COPD_Hist.png?raw=true)
 
@@ -42,7 +42,6 @@ First, I created two groups of counties as 'high' (high air pollution) and 'low'
 ![Likelihood Dist](../images/COPD_high_low_groups.png?raw=true)
 
 Since we have overlap between log likelihood of -1.8 and 0, we compare data points from both groupswithin that range. Note that the log likelihood for the 'high' safety group is concentrated near 0. This is expected, since predicitons for this group are much more accurate than the other group.
-
 I then received the likelihoods from the model, and matched pairs of counties - one to one - from the 'high' and 'low' groups. I matched them on their closeness in likelihood of having high pollution. This technique was essentially intended to create pairs of counties similar in every way except for death rates and particle density. In other words, it was an attempt to control of confounding variables.
 
 We can then compare all possible pairs from each group, and retrieve pairs that have a 'predict_proba' output within .0005 of each other (in other words, very similar pairs). This should ensure that we have effectively controlled for confounders.
