--- a/_posts/2018-6-15-CDC.md
+++ b/_posts/2018-6-15-CDC.md
@@ -58,7 +58,7 @@ Finally, I ran a T-Test paired data (one variable being P<sub>2.5</sub> Density,
 
 It is clear that P<sub>2.5</sub> Density was is the only statistically significant feature (meaning that air pollution does affect COPD death rates). 
 
-Further, although I found that the mean difference in death rates from COPD between pairs of high and low counties was statistically significant, for IHD it was not. This makes intuitive sense, because the lungs are the first organs to be affected by air pollution! To quantify this, I could infer that, on average, counties with high particulate matter density witnessed 7% more deaths than their low density counterparts. 
+Further, although I found that the mean difference in death rates from COPD between pairs of 'high pollution' and 'low pollution' counties was statistically significant, for IHD it was not. This makes intuitive sense, because the lungs are the first organs to be affected by air pollution! To quantify this, I could infer that, on average, counties with high particulate matter density witnessed 7% more deaths than their low density counterparts. 
 
 
 
