Adjustments to images

--- a/_posts/2018-5-02-Word_2_Vec.md
+++ b/_posts/2018-5-02-Word_2_Vec.md
@@ -7,7 +7,7 @@ It is understood that there are significant distinctions between the stylistic m
 
 Comedies on the other hand, have multiple varied plot lines and, using NLP verbage, will have more disparate topicality. I was hoping Word2Vec could echo my undrstanding of tragedies and comedies when plotting word relationships in space. Word2Vec will use either a SkipGram model or a CBOW to derive realtive distances between words. A Skipgram model will find context words given a single word, while a CBOW module does the opposite.
 
-In order to use Word2Vec, I had to create corpoda of intididual documents (sentences). I first filtered out both stopwords and names of characters that denote the speaker at the time. I then ran my model through Word2Vec and plotted my results using T-SNE.
+In order to use Word2Vec, I had to create corpora of individual documents (sentences). I first filtered out both stopwords and names of characters that denote the speaker at the time. I then ran my model through Word2Vec and plotted my results using T-SNE.
 
 I plotted the tragedy Richard III relative to two comedies (The Tempest and Much Ado About Nothing), and we see that the tragedy (in green) has a much stronger gravitational center than the two comedies.
 
