modified post on Deaths from Air Pollution

--- a/_posts/2018-6-15-CDC.md
+++ b/_posts/2018-6-15-CDC.md
@@ -56,9 +56,33 @@ Finally, I ran a T-Test paired data (one variable being P<sub>2.5</sub> Density,
 * 2013 Urbanization Code: Ttest Result(1.57890, pvalue=0.11501) 
 * Population: Ttest Result(statistic=1.85492, pvalue=0.39302) 
 
-It is clear that P<sub>2.5</sub> Density was is the only statistically significant feature (meaning that air pollution does affect COPD death rates). 
+It is clear that P<sub>2.5</sub> Density was is the only statistically significant feature (meaning that air pollution does affect COPD death rates). I could see that, on average, counties with high particulate matter density witnessed more deaths by COPD than their low density counterparts. The actual difference was, on average, 7%, but we can only reject the null hypothesis here, and state that the mean difference is most likely not zero.
 
-Further, although I found that the mean difference in death rates from COPD between pairs of 'high pollution' and 'low pollution' counties was statistically significant, for IHD it was not. This makes intuitive sense, because the lungs are the first organs to be affected by air pollution! To quantify this, I could infer that, on average, counties with high particulate matter density witnessed 7% more deaths than their low density counterparts. 
+Further, although I found that the mean difference in death rates from COPD between pairs of 'high pollution' and 'low pollution' counties was statistically significant, for IHD it was not. For IHD we got -.007 as the mean difference between pairs. Not only is this difference very small, the differential is in the opposite direction to we were hoping for (fewer deaths in polluted counties)! The pvalue for this result was .89 which is far too close to 1 to attempt inference. This result looks very random, and not significant.
+
+This makes intuitive sense, because the lungs are the first organs to be affected by air pollution, and not the heart! As an additional question, is there a sample size that would detect a mean difference of -.007 deaths fro IHD as significant?
+
+## Required Sample Size to Detect Significant Result for IHD:
+
+The minimum sample size is related to the power of a test, which is the complement of a Type 2 error (1-β). This is essentially probability of detecting a signficant difference between two statistics, if such a difference exists. If your (required) power is 80%, then this means that you have a 20% probability of failing to detect a significant difference when one does exist, i.e., a false negative result. It also means that you want 80% of the data points in your sampling distribution (i.e the 80th percentile of the distribution) to fall outside of the threshold of significance from your null distribution.
+
+Let's set Zβ to be the z-score that marks the 80th percentile of the sampling distribution. This value is approximately .84 standard errors from the mean of the distribution. What about our threshhold for significance for the null distribution? Let's set that at 5%. Let's denote Zα to be the z-score marking the 97.5th percentile (since this is a two sided test) which roughly leads to 1.96 standard errors from the mean of the null distribution.
+
+Putting all this together, we can say that we want 80% of the values from the sampling distribution to lie 1.96 standard errors away from the null distribution. The distance between the two means becomes our point estimate when we calculate our sample size. In other words, our point estimate is the z score from our threshold for significance plus our z-score from our power requirement (1.96 +.84 = 2.80).
+
+Our margin of error is:
+
+(SE)/\sqrt{n}(Zα+Zβ)
+
+where SE is the standard error of the sample of paird differences and (Zα+Zβ) is the point estimate.
+
+However, we know we want our margin of error to be the difference between our mean difference between pairs (.007) and 0 (the null hypothesis: (.007-0).
+
+Rearranging the equation:
+
+n1 = n2 = ((Zα+Zβ)^2)(SE)/(-.007-0)^2) 
+
+This is equal to a sample size of 2,030,376, which is much larger than we could possibly get in a real world setting!
 
 
 
