modified post on Deaths from Air Pollution

--- a/_posts/2018-6-15-CDC.md
+++ b/_posts/2018-6-15-CDC.md
@@ -72,7 +72,7 @@ Putting all this together, we can say that we want 80% of the values from the sa
 
 Our margin of error is:
 
-(SE)/\sqrt{n}(Zα+Zβ)
+(SE)(Zα+Zβ)
 
 where SE is the standard error of the sample of paird differences and (Zα+Zβ) is the point estimate.
 
@@ -80,7 +80,7 @@ However, we know we want our margin of error to be the difference between our me
 
 Rearranging the equation:
 
-n1 = n2 = ((Zα+Zβ)^2)(SE)/(-.007-0)^2) 
+n = ((Zα+Zβ)^<sup>2</sup>)(SE)^<sub>2</sub>2/(-.007-0)<sub>2</sub>) 
 
 This is equal to a sample size of 2,030,376, which is much larger than we could possibly get in a real world setting!
 
