--- a/_posts/2018-6-15-CDC.md
+++ b/_posts/2018-6-15-CDC.md
@@ -80,7 +80,7 @@ However, we know we want our margin of error to be the difference between our me
 
 Rearranging the equation:
 
-n = ((Zα+Zβ)^<sup>2</sup>)(SE)^<sub>2</sub>2/(-.007-0)<sub>2</sub>) 
+n = ((Zα+Zβ)<sup>2</sup>)(SE)<sup>2</sup>2/(-.007-0)<sup>2</sup>) 
 
 This is equal to a sample size of 2,030,376, which is much larger than we could possibly get in a real world setting!
 
