modified post on Deaths from Air Pollution

--- a/_posts/2018-6-15-CDC.md
+++ b/_posts/2018-6-15-CDC.md
@@ -74,9 +74,9 @@ Our margin of error is:
 
 (SE)(Zα+Zβ)
 
-where SE is the standard error of the sample of paird differences and (Zα+Zβ) is the point estimate.
+where SE is the standard error of the sample of paired differences, and (Zα+Zβ) is the point estimate.
 
-However, we know we want our margin of error to be the difference between our mean difference between pairs (.007) and 0 (the null hypothesis: (.007-0).
+However, we know we want our margin of error to be the difference between our mean difference between pairs (.007) and 0 (the null hypothesis): (.007-0).
 
 Rearranging the equation:
 
