--- a/_posts/2018-6-15-CDC.md
+++ b/_posts/2018-6-15-CDC.md
@@ -74,13 +74,13 @@ Our margin of error is:
 
 (SE)(Zα+Zβ)
 
-where SE is the standard error of the sample of paired differences, and (Zα+Zβ) is the point estimate.
+where SE in this case (0.0521) is the standard error of the sample of paired differences, and (Zα+Zβ) is the point estimate.
 
 However, we know we want our margin of error to be the difference between our mean difference between pairs (.007) and 0 (the null hypothesis): (.007-0).
 
 Rearranging the equation:
 
-n = ((Zα+Zβ)^2)(SE)/(-.007-0)^2) 
+n = ((Zα+Zβ)^2)(VAR)/(.007-0)^2) where VAR is the variance of our sample.
 
 This is equal to a sample size of 2,030,376, which is much larger than we could possibly get in a real world setting!
 
